# spotifySongGenerator

./: .gitignore  01-get_connection.py  02-process_songs.py  03-main.py  README.md  few_shot.py  llm_helper.py  pyproject.toml  song_generator.py
