[project]
name = "project-3-spotifysonggenerator"
version = "0.1.0"
description = "Spotify Song Generator"
authors = [
    {name = "bautista.peco.97@gmail.com"}
]
license = {text = "Bautista Peco - April 2025"}
readme = "README.md"
requires-python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "langchain (>=0.3.23,<0.4.0)",
    "langchain-groq (>=0.3.2,<0.4.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "serpapi (>=0.1.5,<0.2.0)",
    "wikipedia (>=1.4.0,<2.0.0)",
    "langchain-community (>=0.3.21,<0.4.0)",
    "numexpr (>=2.10.2,<3.0.0)",
    "google-search-results (>=2.4.2,<3.0.0)",
    "unstructured (>=0.17.2,<0.18.0)",
    "libmagic (>=1.0,<2.0)",
    "python-magic (>=0.4.27,<0.5.0)",
    "python-magic-bin (>=0.4.14,<0.5.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)",
    "torch ==2.2.0",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "hf-xet (>=1.0.3,<2.0.0)",
    "numpy (<2.0)",
    "langchain-huggingface (>=0.1.2,<0.2.0)",
    "mysql-connector-python (>=9.3.0,<10.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "chromadb (>=1.0.5,<2.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "selenium (>=4.31.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false